[gd_scene load_steps=4 format=3 uid="uid://b6mh6id0ynk0e"]

[ext_resource type="Script" uid="uid://bqha73w5koe1o" path="res://scripts/scenes/narrative/narrative.gd" id="1_2h8hd"]
[ext_resource type="PackedScene" uid="uid://bsebevtfokfkx" path="res://scenes/ui/dialog_system.tscn" id="2_32p2c"]

[sub_resource type="QuadMesh" id="QuadMesh_1cfbs"]
size = Vector2(3.2, 1.8)

[node name="Narrative" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2h8hd")

[node name="SharedUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundImage" type="TextureRect" parent="SharedUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogSystem" parent="SharedUI" instance=ExtResource("2_32p2c")]
layout_mode = 1
offset_top = 1040.0
offset_bottom = 1040.0

[node name="NarrativeInput" type="Control" parent="SharedUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="SharedUI/NarrativeInput"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -119.0
offset_right = 110.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 50

[node name="NextButton" type="Button" parent="SharedUI/NarrativeInput/MarginContainer"]
layout_mode = 2
text = "Next
"

[node name="XRUI" type="Node3D" parent="."]

[node name="XROrigin3D" type="XROrigin3D" parent="XRUI"]

[node name="XRCamera3D" type="XRCamera3D" parent="XRUI/XROrigin3D"]

[node name="LeftController" type="XRController3D" parent="XRUI/XROrigin3D"]
tracker = &"left_hand"

[node name="RightController" type="XRController3D" parent="XRUI/XROrigin3D"]
tracker = &"right_hand"

[node name="UIPanel" type="Node3D" parent="XRUI"]

[node name="PanelMesh" type="MeshInstance3D" parent="XRUI/UIPanel"]
mesh = SubResource("QuadMesh_1cfbs")
skeleton = NodePath("../..")

[node name="SubViewport" type="SubViewport" parent="XRUI/UIPanel"]
size = Vector2i(1920, 1080)
